Fixing z-index and adding box-shadow to the messenger component

--- a/src/sass/components/_messenger.scss
+++ b/src/sass/components/_messenger.scss
@@ -13,6 +13,8 @@
 
   transition: opacity .8s ease-in-out;
 
+  z-index: 1;
+
   &.appear {
     opacity: 1;
   }
@@ -31,6 +33,8 @@
     
     border-radius: 6px;
     border: 1px solid $color-blue-dark;
+
+    box-shadow: 0 2px 4px rgba($color-black,.25);
 
     .message-icon {
       
